--- a/src/App.css
+++ b/src/App.css
@@ -1,67 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-*{
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-
-li, a, button {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 500;
-  font-size: 20px;
-  text-decoration: none;
-}
-
-header {
+.products{
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 30px 10%;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 30px 0px;
 }
 
-.logo {
-  cursor: pointer;
-  height: 50px;
-  width: 55px;
-}
-.logotitle{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-    font-size: 20px;
-
+.cart{
+  margin: 30px 0px;
 }
 
-.nav__links {
-  list-style: none;
+.cart h1{
+  text-align: center;
 }
-
-.nav__links li {
-  display: inline-block; /*side by side rakhxa*/
-  padding: 0px 20px;
-}
-
-.nav__links li a {
-  transition: all 0.3s ease 0s;
-}
-
-.nav__links li a:hover {
-  color: #0088a9;
-}
-
-
-
-button:hover {
-  background-color: rgba(0,136,169,1);
-
-}
-
-footer {
-  font-family: "Montserrat", sans-serif;
-  display: flex;
-  align-items:center;
-  justify-content:center;
-}  
